--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   just_audio: ^0.9.36 # Thư viện phát nhạc phổ biến nhất
   audio_session: ^0.1.18 # Quản lý phiên âm thanh
   marquee: ^2.3.0
+  palette_generator: ^0.3.3 # Thêm dòng này
 
 dev_dependencies:
   flutter_test:
